--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+  color: #faa41b;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+html{
+  background-color: #090909;
+}
+
+p {
+  color: #faa41b;
+  padding: 2px;
+  }
+i {
+  padding: 1em;
+  font-size: xx-large;
+}
 .App {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0;
-}
-
-.header ul {
-  padding: 0;
-}
-.header li {
-  list-style: none;
-  display: inline-block;
-  padding: 0 10px;
-  border-style: solid;
-}
-
-.header a{
-  text-decoration:none;
-  color: #555;
-  transition: all 0.3s ease 0s;
-}
-
-.header a:hover {
-  color: #b2dfdb
-}
-
-
-.tool-container{
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
-  background-color: rgb(247, 240, 230);
+  
+}
+.app-header i{
+  align-items: right;
+  justify-content: right;
 }
 
-.item {
-  margin: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: 4px 4px 8px grey;
-  padding: 1em;
-}
-
-.item img{
-  height: 75px;
-  width: 75px;
-  box-shadow: 4px 4px 8px grey;
-  border-radius: 90%;
-}
-
-#logo {
-  float: left;
-  width: 20%;
-  height: 20%;
-}
